change table header

--- a/zonoapp/templates/pages/qa_parameters/qa_parameters.html
+++ b/zonoapp/templates/pages/qa_parameters/qa_parameters.html
@@ -99,14 +99,15 @@
     </div>
     <div class="card-block row">
         <div class="col-sm-12 col-lg-12 col-xl-12">
-            <div class="table-responsive custom-scrollbar">
-                <table class="table table-inverse table-striped">
-                    <thead>
+            <div class="table-responsive table-striped">
+                <table class="table"  id="callLogsTable">
+                    <thead class="table-dark">
                         <tr>
-                            <th scope="col">Organisation Name</th>
-                            <th scope="col">Name</th>
+                            <th class=""><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Organisation Name</span></th>
+
+                            <th class=""><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Name</span></th>
                             <th></th>
-                            <th scope="col">Action</th>
+                            <th class=""><span style="font-size: 16px; font-weight: 800; line-height: 1; letter-spacing: 0.5px;">Action</span></th>
                         </tr>
                     </thead>
                     <tbody>
