changes no logs available

--- a/zonoapp/templates/pages/campaign/call_logs.html
+++ b/zonoapp/templates/pages/campaign/call_logs.html
@@ -62,7 +62,7 @@
                 {% endfor %}
             {% else %}
                 <tr>
-                    <td colspan="{{ call_logs_data.0.keys|length }}">No logs available</td>
+                    <td colspan="{{ call_logs_data.0.keys|length }}"><h6>No logs available </h6></td>
                 </tr>
             {% endif %}
         </tbody>
