--- a/zonoapp/templates/pages/campaign/live_calls.html
+++ b/zonoapp/templates/pages/campaign/live_calls.html
@@ -71,7 +71,7 @@
                 {% endfor %}
             {% else %}
                 <tr>
-                    <td colspan="4">No logs available</td>
+                    <td colspan="4"><h6>No logs available</h6></td>
                 </tr>
             {% endif %}
         </tbody>
