--- a/zonoapp/templates/pages/dashboard/dashboard.html
+++ b/zonoapp/templates/pages/dashboard/dashboard.html
@@ -190,7 +190,7 @@
             <div class="card-header">
                 <h4 class="fw-bold">QA Analysis of Recent Calls</h4>
             </div>
-            <div class="card-body d-flex justify-content-center align-items-center" style="height: 300px; padding: 18px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; background-color: #fff;">
+            <div class="card-body d-flex justify-content-center align-items-center" style="height: 300px; padding: 18px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; ">
                 <canvas id="qaChart" style="width: 80%; height: 80%;"></canvas>
             </div>
         </div>
@@ -251,8 +251,8 @@ const qaChart = new Chart(ctxqa, {
             {
                 label: 'Met',
                 data: [3, 4, 2, 1, 4, 3, 2, 1, 3, 2], // Sample data for parameters met
-                backgroundColor: 'rgba(75, 192, 192, 0.6)', // Example fill color
-                borderColor: 'rgba(75, 192, 192, 1)',
+                backgroundColor: x, // Example fill color
+                borderColor: x,
                 borderWidth: 3,
                 fill: false,
                 pointStyle: 'circle',
@@ -263,8 +263,8 @@ const qaChart = new Chart(ctxqa, {
             {
                 label: 'Not Met',
                 data: [7, 6, 8, 9, 6, 7, 8, 9, 7, 8], // Sample data for parameters not met
-                backgroundColor: 'rgba(255, 99, 132, 0.6)', // Example fill color
-                borderColor: 'rgba(255, 99, 132, 1)',
+                backgroundColor: y, // Example fill color
+                borderColor: y,
                 borderWidth: 2,
                 pointStyle: false,
                 fill: true,
