--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -101,6 +101,8 @@
             <li><a href="/letter_box"><i data-feather="mail"></i><span>Inbox</span></a></li>
             <li><a href="/task"><i data-feather="file-text"></i><span>Taskboard</span></a></li> -->
             <li><a href="/contact_sale"><i data-feather="mail"></i><span>Contact Sales</span></a></li>
+            <li><a href="/add_payment"><i data-feather="mail"></i><span>Recharge</span></a></li>
+
             <li><a href="/logout_view"> <i data-feather="log-in"></i><span>Log Out</span></a></li>
           </ul>
         </li>
