--- a/zonoapp/templates/pages/dashboard/dashboard.html
+++ b/zonoapp/templates/pages/dashboard/dashboard.html
@@ -98,10 +98,8 @@
           </div>
         </div>
         </div>
-
-
-
-      <div class="row">
+    </div></div>
+    <div class="row">
       <div class="col-xxl-6 col-lg-6 proorder-xl-5 box-col-6">
         <div class="card">
           
@@ -161,7 +159,7 @@
 
         </div>
       </div>
-
+    </div>
     <div class="row">
       
       <div class="col-xxl-4 col-md-6 proorder-xl-7 box-col-12">
@@ -184,8 +182,8 @@
           </div>
           </div>
         </div>
-    </div>
-    <div class="col-xxl-8 col-lg-6 proorder-xl-5 box-col-6">
+      </div>
+     <div class="col-xxl-8 col-lg-6 proorder-xl-5 box-col-6">
         <div class="card" style="width: 100%!important;height: 95%;">
             <div class="card-header">
                 <h4 class="fw-bold">QA Analysis of Recent Calls</h4>
