spacing added for add-credit button

--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -41,8 +41,9 @@
 
             <span class="text-center"> <b>Credit Balance</b><br> Minutes : <strong
                 id="userCredit"> 0.00 </strong></span>
-            <div class="div-add-card">&nbsp;
-              <a href="{% url 'contact_sale' %}"> <button class="btn btn-primary d-flex justify-content-center align-items-center" type="button" style="width: 10px;height: 80%;">
+            &nbsp;
+            <div class="div-add-card">
+              <a href="{% url 'contact_sale' %}">&nbsp; <button class="btn btn-primary d-flex justify-content-center align-items-center" type="button" style="width: 10px;height: 80%;">
                 <i class="fa fa-plus"></i> 
               </button></a>
 
